Fixed conflicts with old package names (nn2prPKG and nn2prtools) and the new ones

--- a/vignettes/my_vignette.Rmd
+++ b/vignettes/my_vignette.Rmd
@@ -15,8 +15,8 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(nn2prtools)
-library(nn2prPKG)
+library(nn2pr.tools)
+library(nn2pr)
 library(keras)
 library(tensorflow)
 ```
