Changed name from nn2pr to nn2poly

--- a/vignettes/my_vignette.Rmd
+++ b/vignettes/my_vignette.Rmd
@@ -15,8 +15,8 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(nn2pr.tools)
-library(nn2pr)
+library(nn2poly.tools)
+library(nn2poly)
 library(keras)
 library(tensorflow)
 ```
